# dividend-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.spec  dividend-cli.spec  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
dividend_calculator/: __init__.py  cli.py  db.py  fetch.py  utils.py
tests/: test_utils.py
